2017-04-03  Carl Hetherington  <cth@carlh.net>

	* Confirm overwrite of existing DCPs when making a new one.

2017-03-07  Carl Hetherington  <cth@carlh.net>

	* Handle failure to write to cinemas file more nicely.

2017-03-03  Carl Hetherington  <cth@carlh.net>

	* Add option to write KDMs to separate folders
	or ZIP files.

2017-02-28  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-02-27  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

2017-02-20  Carl Hetherington  <cth@carlh.net>

	* Add "Add DCP" button to the content panel.

2017-02-18  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2017-02-15  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2017-02-14  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-02-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.9 released.

2017-02-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.8 released.

2017-02-12  Carl Hetherington  <cth@carlh.net>

	* Use CPL's annotation text for ASSETMAP and PKL (#1048).

	* Fix missing keys in VF KDMs (#975).

2017-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.7 released.

2017-02-06  Carl Hetherington  <cth@carlh.net>

	* Fix display of progress meter (and crash) when sending emails
	from the KDM creator (#1045).

2017-01-28  Carl Hetherington  <cth@carlh.net>

	* Add priority control buttons to batch converter (#961).

2017-01-18  Carl Hetherington  <cth@carlh.net>

	* Updated uk_UA translation from Igor Voytovich.

	* Updated ru_RU translation from Igor Voytovich.

2017-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.6 released.

2017-01-04  Carl Hetherington  <cth@carlh.net>

	* Fix non frame-aligned trims when using the to-playhead
	buttons.

2016-12-25  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.
